samples/_failures_safe/1761480201_9bbbf2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db0d847f.c: In function ‘main’:
./samples/SAFE/__tmp_db0d847f.c:149:9: error: ‘input’ undeclared (first use in this function); did you mean ‘int’?
  149 |         input
      |         ^~~~~
      |         int
./samples/SAFE/__tmp_db0d847f.c:149:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_db0d847f.c:149:14: error: expected ‘;’ at end of input
  149 |         input
      |              ^
      |              ;
./samples/SAFE/__tmp_db0d847f.c:149:9: error: expected declaration or statement at end of input
  149 |         input
      |         ^~~~~
./samples/SAFE/__tmp_db0d847f.c:149:9: error: expected declaration or statement at end of input
